@@ -22,6 +22,7 @@ Application Changes:
 - Custom Fit (Stack) now works properly when the underlying armor piece has a different name than the armor that is to be treated as an accessory.
 - Added a helper reference to show how many free spells have been used by mastery qualities.
 - Qualities marked as not having levels no longer show a stray "1" next to their names when added to characters' sheets.
+- Character sheet viewers and character export forms now update their contents whenever the character obtains something.
 
 Data Changes:
 - Added bonus nodes for Shooter (The Soldier) paragon's Compiling dice pool penalty and +1 limit for attack actions. Fixes #4935.
